Relative only works when .mjs is added.

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,6 @@
 <body>
     <h1>Index</h1>
     <my-counter></my-counter>
-    <script src="/components/counter" type="module"></script>
+    <script src="/components/counter.mjs" type="module"></script>
 </body>
 </html>
