--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-    <h1>Index</h1>
-    <my-counter></my-counter>
-    <script src="/components/counter" type="module"></script>
-</body>
+	<body>
+		<h1>Index</h1>
+		<my-counter></my-counter>
+		<script src="/components/counter" type="module"></script>
+	</body>
 </html>
